fixed header spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -23,22 +23,35 @@ body {
       >img {
         @include media-breakpoint-up(xs) {
           width: auto;
-          height: 750px;
+          height: 400px;
         }
         @include media-breakpoint-up(md) {
           width: auto;
-          height: 500px;
+          height: 400px;
         }
         @include media-breakpoint-up(lg) {
           height: auto;
           width: 100%;
-          max-height: 500px;
-          max-width: 1000px;
+          max-height: 425px;
+          max-width: 850px;
           margin: 0 auto;
         }
       }
     }
   }
+}
+
+.headline h1, .headline h2 {
+  @include media-breakpoint-up(xs) {
+    font-size: 1.5rem;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 2.0rem;
+  }
+  @include media-breakpoint-up(lg) {
+    font-size: 2.5rem;
+  }
+
 }
 
 .marketing-box {
